# blurt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: release-blurt.yml
blurt/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
blurt/public/sfx/notes/: README.md
blurt/src/: App.tsx  figma-tailwind.css  main.tsx  styles.css  vite-env.d.ts
blurt/src-tauri/: Cargo.toml  tauri.conf.json
blurt/src-tauri/icons/: icon.icns
blurt/src-tauri/src/: main.rs
blurt/src/app/: routes.tsx  state.tsx
blurt/src/app/components/: AuthGate.tsx  QuickStartPanel.tsx  RecentsSection.tsx  Sidebar.tsx  StartupSplash.tsx
blurt/src/app/components/auth/: AuthPageShell.tsx  EmailInput.tsx  EmailLabel.tsx  LocalModeLink.tsx  StatusMessage.tsx  (+1 more)
blurt/src/app/layouts/: RootLayout.tsx
blurt/src/app/pages/: CollaboratePage.tsx  HomePage.tsx  LibraryPage.tsx  NotFoundPage.tsx  NotificationsPage.tsx  SessionPage.tsx  SessionReviewPage.tsx
blurt/src/components/: BlurtView.tsx  ReviewView.tsx  SessionSetupView.tsx
blurt/src/hooks/: useAscendingNotePlayer.ts  useTimer.ts
blurt/src/services/: authService.ts  deepLinkAuth.ts  offlineCache.ts  sessionStore.ts  sessionStoreCloud.ts  storageMode.ts  supabaseClient.ts  templateStore.ts  templateStoreCloud.ts
blurt/src/types/: session.ts  template.ts
blurt/src/utils/: arrangeNotesIntoGrid.ts  motion.ts  placeNoteRandomly.ts
docs/: QA_CHECKLIST.md  RELEASE_CHECKLIST.md  SUPABASE_SETUP.md  TROUBLESHOOTING.md
docs/assets/: README.md
scripts/: smoke.sh  verify-release.sh
